@@ -3,6 +3,8 @@
 
 package gnu.expr;
 import java.util.Hashtable;
+import java.io.Externalizable;
+import gnu.bytecode.Type;
 
 public class FindCapturedVars extends ExpWalker
 {
@@ -334,12 +336,19 @@ public class FindCapturedVars extends ExpWalker
 	decl = allocUnboundDecl(exp.getSymbol());
 	exp.setBinding(decl);
       }
-    if (decl.getFlag(Declaration.IS_UNKNOWN)
-	&& comp.getBooleanOption("warn-undefined-variable", false))
+    if (decl.getFlag(Declaration.IS_UNKNOWN))
       {
-	Object resolved = comp.resolve(exp.getSymbol(), exp.isProcedureName());
-	if (resolved == null)
-	  comp.error('w', "no declaration seen for "+exp.getName());
+	Type type = getCompilation().getInterpreter().getTypeFor(exp);
+	if (type instanceof Externalizable)
+	  return new QuoteExp(type);
+
+	if (comp.getBooleanOption("warn-undefined-variable", false))
+	  {
+	    Object resolved
+	      = comp.resolve(exp.getSymbol(), exp.isProcedureName());
+	    if (resolved == null)
+	      comp.error('w', "no declaration seen for "+exp.getName());
+	  }
       }
     capture(Declaration.followAliases(decl));
     return exp;
